Update FieldFinderTest
Work with Java8