@@ -1,11 +1,11 @@
 package no.ssb.dapla.dataset.doc.model.lineage;
 
-import no.ssb.avro.convert.core.SchemaBuddy;
 import no.ssb.dapla.dataset.doc.template.TestUtils;
 import org.apache.avro.Schema;
 import org.apache.avro.SchemaBuilder;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,20 +30,31 @@ class FieldFinderTest {
 
         List<InstanceVariable> instanceVariables = fieldFinder.find("innskudd");
         List<String> paths = instanceVariables.stream().map(InstanceVariable::getPath).collect(Collectors.toList());
-        assertThat(paths).isEqualTo(List.of("konto.innskudd"));
+        assertThat(paths).isEqualTo(Collections.singletonList("konto.innskudd"));
+    }
+
+    @Test
+    void find2FindFnr() {
+        FieldFinder fieldFinder = new FieldFinder(inputSchemaSkatt);
+
+        List<InstanceVariable> instanceVariables = fieldFinder.find("fnr");
+        List<String> paths = instanceVariables.stream().map(InstanceVariable::getPath).collect(Collectors.toList());
+        System.out.println(paths);
     }
 
     @Test
     void findInSkattSchema() {
         Schema schema = TestUtils.loadSchema("testdata/skatt-v0.68.avsc");
-//        System.out.println(SchemaBuddy.parse(schema).toString(true));
 
         FieldFinder fieldFinder = new FieldFinder(schema);
 
         List<InstanceVariable> instanceVariables = fieldFinder.find("organisasjonsnummer");
         List<String> paths = instanceVariables.stream().map(InstanceVariable::getPath).collect(Collectors.toList());
         assertThat(paths.size()).isEqualTo(12);
-        System.out.println(paths);
+
+        fieldFinder.find("organisasjonsnummer").stream().map(InstanceVariable::getPath).forEach(System.out::println);
+        System.out.println("----------------------");
+        fieldFinder.find("personidentifikator").stream().map(InstanceVariable::getPath).forEach(System.out::println);
     }
 
 }
